--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<body>
 		<!-- Modal -->
 		<div id="ex1" class="modal">
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4?autoplay=1&enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		  <!-- <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 		  <!-- <a href="#" rel="modal:close">Close</a> -->
 		</div>
 
@@ -32,9 +33,6 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style1">
-
-						<!-- Link to open the modal -->
-						<p><a href="#ex1" rel="modal:open">Open Modal</a></p>
 
 						<div class="image fit flush">
 							<img src="images/pris1.png" alt="" />
