--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<!-- Modal -->
 		<div id="ex1" class="modal">
-			<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4?autoplay=1&enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4?enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		  <!-- <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/HA5buZsD1w4?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 		  <!-- <a href="#" rel="modal:close">Close</a> -->
 		</div>
